name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
license:             None
author:              Guillaume Bagan
copyright:           2021 Guillaume Bagan
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:
        Day01
        Day02
        Day03
        Util

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
                    BlockArguments
                    FlexibleInstances
                    LambdaCase
                    MultiWayIf
                    TupleSections
                    TypeApplications
                    TypeFamilies

    -- other-extensions:
    build-depends:
                       base >= 4.7 && < 5
                     , array
                     , containers
                     , either
                     , linear
                     , massiv
                     , megaparsec

    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2020
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    default-extensions:
                    BlockArguments
                    FlexibleInstances
                    LambdaCase
                    MultiWayIf
                    TupleSections
                    TypeApplications
                    TypeFamilies
    ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
    build-depends:   base >= 4.7 && < 5
                     , array
                     , containers
                     , either
                     , linear
                     , massiv
                     , megaparsec
                     , aoc2020